fix footer spacing

--- a/watch-providers/style.css
+++ b/watch-providers/style.css
@@ -73,6 +73,7 @@ footer p {
   position: absolute;
   top: 5px;
   height: 40px;
+  margin-left: -20px;
 }
 
 #footer-logo:hover {
